# ferrite

./: Cargo.toml  README.md
src/: logic.rs  main.rs
src/engine/: mod.rs
